--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,9 @@ h3 { font-size: 1.7em; font-weight: normal; margin: 0 0 20px; }
 	#menu li { display: inline; list-style: none; }
 	#menu li a { float: left; margin: 0 0 0 20px; color: #888; }
 		#menu li a:hover { color: #555; }
+		
+#menuMenu {display: none;}
+#menuMenu:hover {display: block;}
 
 .post { clear: both; padding: 30px 10px; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; margin: 0 0 40px; }
 	.post .details { float: left; width: 250px; }
