--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 .header {
-    margin: 0 -30px;
     background-color: #81b300;
     padding: 0 30px;
+    margin-bottom: 25px;
 }
 
 .b-header__link {
@@ -54,4 +54,37 @@
 
 .date{
     text-align: end;
+}
+footer{
+    margin-top: 25px;
+    background-color: #373737;
+    color: #fff;
+    border-top: 1px solid #000;
+    height: 200px;
+}
+
+footer h4{
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.footer-menu{
+    margin: 0;
+    padding: 0;
+}
+.footer-menu div{
+    float: left;
+    margin: 0 40px 20px 20px;
+    max-width: 300px;
+}
+footer-menu div:last-child{
+    float: right;
+}
+footer, footer a{
+    color: #fff;
+}
+footer p{
+    clear: both;
+    background-color: #333333;
+    padding: 10px 5px;
 }
